# magic-trace

src/: dune  event.ml  event.mli  llvm_symbolizer_stubs.cpp  perf_decode.ml  perf_decode.mli  perf_tool_backend.ml  trace.ml  trace_writer.ml
test/: test.ml
